/*
 * Copyright (c) 2008-2024 Emmanuel Dupuy & gui Contributors.
 * This project is distributed under the GPLv3 license.
 * See LICENSE file for more information.
 */

package al.clk.gui.service.language;

import org.antlr.v4.runtime.CharStream;
import org.antlr.v4.runtime.CommonTokenStream;
import org.antlr.v4.runtime.tree.ParseTree;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeWalker;
import al.clk.gui.spi.LanguageSyntaxProvider;
import al.clk.gui.util.exception.ExceptionUtil;
import al.clk.gui.util.parser.antlr.JavaLexer;
import al.clk.gui.util.parser.antlr.JavaListener;
import al.clk.gui.util.parser.antlr.JavaParser;
import al.clk.gui.view.component.Java21TokenMaker;

import java.util.Arrays;
import java.util.Collection;
import java.util.Collections;
import java.util.List;

/**
 * Java language syntax provider implementation.
 * Provides ANTLR parsing and RSyntaxTextArea highlighting for Java source files.
 *
 * @since 2024.1.0
 */
public class JavaLanguageSyntaxProvider implements LanguageSyntaxProvider {

    public static final String LANGUAGE_ID = "java";
    public static final String SYNTAX_STYLE_JAVA21 = "text/java21";

    private static final List<String> FILE_EXTENSIONS = Arrays.asList("java");

    @Override
    public String getLanguageId() {
        return LANGUAGE_ID;
    }

    @Override
    public String getDisplayName() {
        return "Java";
    }

    @Override
    public String getSyntaxStyle() {
        return SYNTAX_STYLE_JAVA21;
    }

    @Override
    public Collection<String> getFileExtensions() {
        return FILE_EXTENSIONS;
    }

    @Override
    public String getTokenMakerClassName() {
        return Java21TokenMaker.class.getName();
    }

    @Override
    public void parse(CharStream input, ParseTreeListener listener) {
        if (!(listener instanceof JavaListener)) {
            throw new IllegalArgumentException("Listener must implement JavaListener");
        }

        try {
            JavaLexer lexer = new JavaLexer(input);
            lexer.removeErrorListeners();

            CommonTokenStream tokens = new CommonTokenStream(lexer);
            JavaParser parser = new JavaParser(tokens);
            parser.removeErrorListeners();

            ParseTree tree = parser.compilationUnit();
            ParseTreeWalker.DEFAULT.walk(listener, tree);
        } catch (StackOverflowError e) {
            // Too complex source file, probably not written by a human.
            // This error may happen on Java file generated by ANTLR for example.
            assert ExceptionUtil.printStackTrace(e);
        }
    }

    @Override
    public LanguageDeclarationListener createDeclarationListener() {
        // Will be implemented when integrating with existing Java listeners
        // For now, return null to indicate use of legacy parsing
        return null;
    }

    @Override
    public LanguageReferenceListener createReferenceListener() {
        // Will be implemented when integrating with existing Java listeners
        // For now, return null to indicate use of legacy parsing
        return null;
    }

    @Override
    public int getPriority() {
        return 100; // High priority for Java
    }
}
